# cae-cli

./: .gitignore  CLAUDE.md  DEVELOPMENT_LOG.md  DEV_LOG.md  LICENSE  README.md  calculix_patterns.txt  pyproject.toml
cae/: __init__.py  enums.py  gui_snapshot.py  main.py  mcp_server.py  protocols.py
cae-gui/src/: style.css
cae-gui/src-tauri/: tauri.conf.json
cae-gui/src-tauri/capabilities/: default.json
cae/ai/: __init__.py  chain_reasoning.py  deepseek_client.py  diagnose.py  diagnosis_visualizer.py  explain.py  fix_rules.py  llm_client.py  prompts.py
cae/config/: __init__.py
cae/contact/: __init__.py  contact_pair.py  friction.py  gap.py  surface_behavior.py  surface_interaction.py  tie.py
cae/coupling/: coupling.py  mpc.py
cae/docker/: __init__.py  calculix.py  generic.py  images.py
cae/inp/: __init__.py  equation.py  model_builder.py  step_keywords.py  template.py
cae/installer/: solver_installer.py
cae/material/: __init__.py  elastic.py  hyperelastic.py  plastic.py
cae/runtimes/: __init__.py  docker.py
cae/solvers/: calculix.py  registry.py
cae/viewer/: __init__.py  _utils.py  frd_parser.py  html_generator.py  mesh_check.py  pyvista_renderer.py  report.py  server.py  vtk_export.py
docs/forum/: 2026-04-03-forum-post-draft.md  2026-04-03-phase1-demo-pack.md
docs/plans/: 2026-04-03-phase1-stability-plan.md  phase1-autofix-whitelist.md
examples/: box.step  bracket.step  plate_with_hole.step  shaft.step  simple_beam.inp  simple_cantilever.inp  strain_type_test.inp  thermal.inp
examples/code_aster_minimal_smoke/: README.md  case.comm
examples/elmer_steady_heat/: case.sif
examples/openfoam_cavity_smoke/: README.md
examples/su2_elasticity_smoke/: README.md  case.cfg
examples/su2_inviscid_bump/: README.md  inv_channel_smoke.cfg
hf-spaces/diagnose-demo/: app.py
tests/: CalculiX 求解器单元测试.py  mesh 模块单元测试.py  test_ai_diagnosis_evidence_enhancements.py  test_ai_diagnosis_prompt.py  test_ai_diagnosis_syntax_guardrails.py  test_ai_output_validation.py  test_autofix_verification.py  test_diagnose_json_cli.py  test_diagnosis_accuracy_guardrails.py  test_diagnosis_fixture_corpus.py  test_diagnosis_output_format.py  test_diagnosis_regression_cases.py  test_docker_feature.py  test_gui_snapshot_cli.py  test_inp_check_json_cli.py  test_mcp_server.py  test_safe_autofix_whitelist.py  viewer 模块单元测试.py  可视化模块单元测试.py  诊断规则批量测试.py
(+54 files in other folders)
