[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cae-cxx"
version = "1.2.5"
description = "轻量化 CAE 命令行工具 — 一条命令跑仿真，一个链接看结果"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["cae", "fea", "simulation", "calculix", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "platformdirs>=4.2",
    "jinja2>=3.1",
]

[project.optional-dependencies]
ai   = ["requests>=2.31", "cadquery>=2.4"]
mesh = ["gmsh>=4.12", "meshio>=5.3"]
dev  = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]
report = ["weasyprint>=60.0"]

[project.scripts]
cae = "cae.main:app"

[tool.hatch.build.targets.wheel]
packages = ["cae"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"